# rust-microservice-presentation

./: README.md
ms-crab-devil/: Cargo.toml  build.rs  make.toml
ms-crab-devil/interface/: watermark_service.proto
ms-crab-devil/migrations/2022-01-24-205842_watermarking_log/: down.sql  up.sql
ms-crab-devil/src/: client.rs  lib.rs  schema.rs  server.rs
ms-crab-devil/src/modules/: mod.rs
ms-crab-devil/src/modules/common/: common_module.rs  mod.rs
ms-crab-devil/src/modules/common/authentication/: authentication_interceptor.rs  mod.rs
ms-crab-devil/src/modules/common/config/: config_provider.rs  mod.rs
ms-crab-devil/src/modules/common/errors/: database.rs  generic.rs  integration.rs  mod.rs  watermark.rs
ms-crab-devil/src/modules/common/infrastructure/: database.rs  mod.rs  module.rs
ms-crab-devil/src/modules/common/infrastructure/aws/: mod.rs  s3_service.rs
ms-crab-devil/src/modules/common/infrastructure/repository/: crud_repository.rs  mod.rs
ms-crab-devil/src/modules/common/infrastructure/transaction/: mod.rs  transaction.rs  transaction_manager.rs
ms-crab-devil/src/modules/common/ioc/: full_service_container.rs  mod.rs
ms-crab-devil/src/modules/common/utils/: mod.rs  time_utils.rs  uuid_utils.rs
ms-crab-devil/src/modules/watermark/: interface.rs  mod.rs  module.rs
ms-crab-devil/src/modules/watermark/application/: mod.rs  watermark_service_handler.rs
ms-crab-devil/src/modules/watermark/domain/service/: mod.rs  pdf_modification_service.rs  watermark_service.rs
ms-crab-devil/src/modules/watermark/infrastructure/entity/: mod.rs  (+1 more)
(+10 files in other folders)
